# sdf-builder

./: Cargo.toml  README.md  flake.nix
crates/dfutils/: Cargo.toml
crates/dfutils/src/: grid.rs  gridref.rs  lib.rs  primitives.rs  primitives_enum.rs  sdf.rs
crates/dfutils/src/primitives/: cross.rs  disk.rs  line_segment.rs  plane.rs  ray.rs  rectangle.rs  torus.rs
runner/: Cargo.toml
runner/src/: app.rs  camera.rs  context.rs  controller.rs  egui_components.rs  lib.rs  render_pass.rs  shader.rs  shaders.rs  state.rs  texture.rs  ui.rs  window.rs
runner/src/controller/: mod.rs  resize.rs  sdf_builder_tree.rs  shape_ui.rs
runner/src/egui_components/: drag_and_drop.rs  mod.rs  repetition.rs  sdf_builder_tree.rs
runner/src/shaders/: sdf_builder.rs
runner/src/shaders/sdf_builder/: icons.rs  instructions.rs  mod.rs  resize.rs  sdf_builder_tree.rs  shape_ui.rs
shaders/sdf-builder/: Cargo.toml
shaders/sdf-builder/src/: lib.rs
shaders/shared/: Cargo.toml
shaders/shared/src/: lib.rs  push_constants.rs  sdf_interpreter.rs  sdf_wrapper.rs  stack.rs
shaders/shared/src/push_constants/: sdf_builder.rs
