[workspace]
resolver = "2"
members = [
  "runner",
  "runner/builder",
  "crates/dfutils",
  "shaders/mandelbrot",
  "shaders/ray-marching",
  "shaders/ray-marching-2d",
  "shaders/koch-snowflake",
  "shaders/sierpinski-triangle",
  "shaders/sdfs-2d",
  "shaders/sdfs-3d",
  "shaders/hydrogen-wavefunction",
  "shaders/spherical-harmonics",
  "shaders/spherical-harmonics-shape",
  "shaders/fun-rep-demo",
  "shaders/sdf-builder",
]
default-members = ["runner"]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies.spirv-std]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "54f6978c25b7e168ded04e720b996625b3654ebd"

[workspace.dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "54f6978c25b7e168ded04e720b996625b3654ebd"
default-features = false

[profile.dev]
package.spirv-tools-sys.opt-level = 1
