[workspace]
resolver = "2"
members = [
  "runner",
  "runner/builder",
  # "crates/dfutils",
  "shaders/sdf-builder",
]
default-members = ["runner"]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "83c7e8d2255a7e86d40b4428934dab303b0d5934"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "83c7e8d2255a7e86d40b4428934dab303b0d5934"
default-features = false

[profile.dev]
package.spirv-tools-sys.opt-level = 1
