[workspace]
resolver = "2"
members = [
  "runner",
  "shaders/sdf-builder",
]
default-members = ["runner"]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "529aaf4f3fd1f40cb7dea4fbfd484d544b7b60ed"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "529aaf4f3fd1f40cb7dea4fbfd484d544b7b60ed"
default-features = false

[profile.dev]
package.spirv-tools-sys.opt-level = 1
