[package]
name = "dfutils"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "rayon"]
std = ["glam/std", "dep:assert_approx_eq"]
libm = ["glam/libm", "dep:num-traits"]

[dependencies]
assert_approx_eq = { version = "1.1.0", optional = true }
glam = { version = "0.25.0", default-features = false }
num-traits = { version = "0.2.18", default-features = false, features = ["libm"], optional = true }
rayon = { version = "1.10.0", optional = true }
