[package]
name = "dfutils"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "rayon", "strum"]
std = ["glam/std", "dep:assert_approx_eq"]
libm = ["glam/libm", "dep:num-traits"]
strum = ["dep:strum"]

[dependencies]
assert_approx_eq = { version = "1.1.0", optional = true }
enum_delegate = "0.2.0"
glam = { version = "0.25.0", default-features = false }
num-traits = { version = "0.2.18", default-features = false, features = ["libm"], optional = true }
rayon = { version = "1.10.0", optional = true }
strum = { version = "0.26.2", features = ["derive"], optional = true }
