[package]
name = "sdf_builder"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { workspace = true }
dfutils = { path = "../../../dfutils", default-features = false, features = [
  "libm",
] }

shared = { path = "../shared" }
